--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -6,10 +6,28 @@
     <android.support.constraint.ConstraintLayout
         style="@style/matchParent"
         tools:context="haiphat.com.bds.nghetuvan.view.news.NewsActivity">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvNews"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            style="@style/matchParent"/>
+
+        <ProgressBar
+            android:id="@+id/pbLoadMore"
+            style="@style/wrapContent"
+            android:theme="@style/AppTheme.WhiteAccent"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            style="@style/matchWrap"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/pbLoadMore"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvNews"
+                style="@style/matchParent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp" />
+        </android.support.v4.widget.SwipeRefreshLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
