update code api news

--- a/app/src/main/res/layout/activity_partner_detail.xml
+++ b/app/src/main/res/layout/activity_partner_detail.xml
@@ -129,18 +129,14 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/clContent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                style="@style/matchWrap"
+                android:padding="20dp"
                 android:descendantFocusability="blocksDescendants"
                 android:focusableInTouchMode="true">
-                <TextView
-                    android:id="@+id/tvContent"
-                    style="@style/wrapContent"
-                    android:text="Chua Co noi dung"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                <org.sufficientlysecure.htmltextview.HtmlTextView
+                    android:id="@+id/htmTextContent"
+                    style="@style/matchParent"
+                    android:text="Chưa có dữ liệu nào cả" />
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v4.widget.NestedScrollView>
