--- a/app/src/main/res/layout/fragment_news_info.xml
+++ b/app/src/main/res/layout/fragment_news_info.xml
@@ -3,16 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v4.widget.NestedScrollView
-        style="@style/matchParent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+    <android.support.v4.widget.NestedScrollView style="@style/matchParent">
 
-        <org.sufficientlysecure.htmltextview.HtmlTextView
-            android:id="@+id/htmTextInfo"
-            style="@style/matchParent"
+        <android.support.constraint.ConstraintLayout
+            style="@style/matchWrap"
+            android:padding="20dp">
 
-            android:text="Chưa có dữ liệu nào cả" />
+            <org.sufficientlysecure.htmltextview.HtmlTextView
+                android:id="@+id/htmTextInfo"
+                style="@style/matchParent"
 
+                android:text="Chưa có dữ liệu nào cả" />
+        </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
 </layout>
