--- a/app/src/main/res/layout/fragment_news_comment.xml
+++ b/app/src/main/res/layout/fragment_news_comment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,15 +12,27 @@
         tools:context="haiphat.com.bds.nghetuvan.view.HomeActivity"
         tools:showIn="@layout/app_bar_home">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvNewsComment"
-            android:layout_width="0dp"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            style="@style/matchWrap"
             android:layout_height="0dp"
-            android:background="@color/bgSelectProfile"
-            app:layout_constraintBottom_toTopOf="@+id/viewBottom"
+            app:layout_constraintBottom_toTopOf="@+id/pbLoadMore"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvNewsComment"
+                style="@style/matchParent"
+                android:background="@color/bgSelectProfile" />
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <ProgressBar
+            android:id="@+id/pbLoadMore"
+            style="@style/wrapContent"
+            android:theme="@style/AppTheme.WhiteAccent"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@id/viewBottom"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <View
             android:id="@+id/viewBottom"
@@ -46,4 +59,5 @@
 
 
     </android.support.constraint.ConstraintLayout>
+
 </layout>
