--- a/app/src/main/res/layout/activity_partner_detail.xml
+++ b/app/src/main/res/layout/activity_partner_detail.xml
@@ -86,7 +86,7 @@
                                 android:id="@+id/imgSetting"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_setting"
+                                android:src="@drawable/ic_share"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
