--- a/app/src/main/res/layout/fragment_news_comment.xml
+++ b/app/src/main/res/layout/fragment_news_comment.xml
@@ -30,33 +30,27 @@
             style="@style/wrapContent"
             android:theme="@style/AppTheme.WhiteAccent"
             android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@id/viewBottom"
+            app:layout_constraintBottom_toTopOf="@id/rippleComment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <View
-            android:id="@+id/viewBottom"
-            style="@style/viewLine"
-            app:layout_constraintBottom_toTopOf="@+id/imgReply" />
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleComment"
+            style="@style/matchWrap"
+            android:background="@drawable/bg_radius_white"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/edComment"
-            style="@style/withWrap"
-            android:background="@android:color/transparent"
-            app:layout_constraintBottom_toBottomOf="@+id/imgReply"
-            app:layout_constraintEnd_toStartOf="@+id/imgReply"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imgReply" />
-
-        <ImageView
-            android:id="@+id/imgReply"
-            style="@style/wrapContent"
-            android:alpha="0.5"
-            android:padding="10dp"
-            android:src="@drawable/ic_send_b"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
+            <TextView
+                style="@style/wrapContent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:padding="10dp"
+                android:text="Bình luận"
+                android:textColor="@color/textLabel"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
 
     </android.support.constraint.ConstraintLayout>
 
