--- a/app/src/main/res/layout/item_news_detail_comment.xml
+++ b/app/src/main/res/layout/item_news_detail_comment.xml
@@ -64,8 +64,8 @@
 
             <ImageView
                 android:id="@+id/imgTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="12dp"
+                android:layout_height="15dp"
                 android:src="@drawable/ic_time"
                  />
 
@@ -96,8 +96,8 @@
 
             <ImageView
                 android:id="@+id/imgReply"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="12dp"
+                android:layout_height="15dp"
                 android:src="@drawable/ic_reply" />
 
             <TextView
