--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -6,6 +6,8 @@
     <haiphat.com.bds.nghetuvan.utils.RippleView
         style="@style/matchWrap"
         android:layout_marginBottom="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:background="@drawable/bg_radius_white">
 
 
@@ -44,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/ic_time"
+            android:src="@drawable/ic_type_news"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tvName"
             app:layout_constraintTop_toBottomOf="@+id/tvName" />
@@ -70,7 +72,7 @@
             android:id="@+id/imgFeedback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_time"
+            android:src="@drawable/ic_commnent"
             android:layout_marginLeft="15dp"
             app:layout_constraintBottom_toBottomOf="@+id/imgNewsType"
             app:layout_constraintStart_toEndOf="@+id/tvNewsType"
