--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,9 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="haiphat.com.bds.nghetuvan.view.auth.ForgotPasswordActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</android.support.constraint.ConstraintLayout>
+    <data>
+
+        <variable
+            name="forgotPasswordViewModel"
+            type="haiphat.com.bds.nghetuvan.viewmodel.auth.ForgotPasswordViewModel" />
+    </data>
+
+    <android.support.constraint.ConstraintLayout
+        style="@style/matchParent"
+        android:background="@drawable/ic_background_auth">
+
+        <View
+            style="@style/matchParent"
+            android:alpha="0.5"
+            android:background="#6069a5" />
+
+
+        <include
+            android:id="@+id/logo"
+            layout="@layout/logo_view"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="25dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvTitle"
+            style="@style/wrapContent"
+            android:layout_marginTop="24dp"
+            android:text="Hệ thống giải pháp bất động sản"
+            android:textAllCaps="true"
+            android:textColor="@color/colorWhite"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo" />
+
+        <TextView
+            android:id="@+id/tvName"
+            style="@style/wrapContent"
+            android:layout_marginTop="5dp"
+            android:text="Số 1 việt nam"
+            android:textAllCaps="true"
+            android:textColor="@color/colorWhite"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilEmail"
+            style="@style/withWrap"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvName">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetEmail"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập Email"
+                android:inputType="textEmailAddress"
+                android:text="@{forgotPasswordViewModel.email}"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_email}"
+                app:validateEmailErrorMessage="@{@string/text_validate_email_invalid}"/>
+        </android.support.design.widget.TextInputLayout>
+
+
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleSendEmail"
+            style="@style/withWrap"
+            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_view_btn_login_email"
+            android:textAllCaps="false"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+            app:layout_constraintStart_toStartOf="@+id/tilEmail"
+            app:layout_constraintTop_toBottomOf="@+id/tilEmail">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/text_forgot_password_send_email"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
+
+
+    </android.support.constraint.ConstraintLayout>
+
+</layout>
