update UI  Profile

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,7 +11,7 @@
 
         <android.support.constraint.ConstraintLayout
             style="@style/matchParent"
-            tools:context="haiphat.com.bds.nghetuvan.view.news.NewsActivity">
+            tools:context="haiphat.com.bds.nghetuvan.view.profile.SettingActivity">
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/clHeader"
