--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,7 +5,7 @@
 
     <android.support.constraint.ConstraintLayout
         style="@style/matchParent"
-        tools:context="haiphat.com.bds.nghetuvan.view.news.NewsActivity">
+        tools:context="haiphat.com.bds.nghetuvan.view.profile.SettingActivity">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvNews"
             android:layout_marginLeft="10dp"
