--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -5,7 +5,7 @@
 
     <android.support.constraint.ConstraintLayout
         style="@style/matchParent"
-        tools:context="haiphat.com.bds.nghetuvan.view.news.NewsActivity">
+        tools:context="haiphat.com.bds.nghetuvan.view.profile.SettingActivity">
 
         <ProgressBar
             android:id="@+id/pbLoadMore"
