--- a/app/src/main/res/layout/activity_update_information.xml
+++ b/app/src/main/res/layout/activity_update_information.xml
@@ -1,9 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="haiphat.com.bds.nghetuvan.view.profile.UpdateInformationActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</android.support.constraint.ConstraintLayout>
+    <data>
+        <variable
+            name="updateInformation"
+            type="haiphat.com.bds.nghetuvan.viewmodel.profiles.UpdateInformationViewModel"/>
+    </data>
+
+    <android.support.constraint.ConstraintLayout
+        style="@style/matchParent"
+        android:background="@drawable/ic_background_auth">
+
+        <View
+            style="@style/matchParent"
+            android:alpha="0.5"
+            android:background="#6069a5" />
+
+
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/imgBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_back"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
+
+        <TextView
+            android:id="@+id/tvTitle"
+            style="@style/wrapContent"
+            android:layout_marginRight="50dp"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif"
+            android:maxLines="1"
+            android:text="@string/profile_info_account"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/rippleBack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rippleBack"
+            app:layout_constraintTop_toBottomOf="@+id/rippleBack" />
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilName"
+            style="@style/withWrap"
+            android:layout_marginTop="32dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetName"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:inputType="textFilter"
+                android:hint="Nhập họ và tên"
+                android:text="@{updateInformation.fullName}"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_name}"
+                android:textColor="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilPhone"
+            style="@style/withWrap"
+            android:layout_marginTop="32dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/tilName"
+            app:layout_constraintStart_toStartOf="@+id/tilName"
+            app:layout_constraintTop_toBottomOf="@+id/tilName">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetPhone"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:inputType="number"
+                android:text="@{updateInformation.phone}"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_phone}"
+                app:validatePhoneErrorMessage="@{@string/text_validate_phone_invalid}"
+                android:hint="Nhập số điện thoại"
+                android:textColor="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilBirthDay"
+            style="@style/withWrap"
+            android:layout_marginTop="10dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/tilName"
+            app:layout_constraintStart_toStartOf="@+id/tilName"
+            app:layout_constraintTop_toBottomOf="@+id/tilPhone">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/telBirthDay"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập ngày sinh"
+                android:inputType="text|date"
+                android:text="@{updateInformation.birthDay}"
+                app:validateRequiredErrorMessage="@{@string/text_validate_birth_day}"
+                android:textColor="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilIdNumber"
+            style="@style/withWrap"
+            android:layout_marginTop="10dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/tilName"
+            app:layout_constraintStart_toStartOf="@+id/tilName"
+            app:layout_constraintTop_toBottomOf="@+id/tilBirthDay">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/telIdNumber"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập số chứng minh thư"
+                android:inputType="number"
+                android:text="@{updateInformation.idNumber}"
+                app:validateRequiredErrorMessage="@{@string/text_validate_id_number}"
+                android:textColor="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleSave"
+            style="@style/withWrap"
+            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_view_btn_login_email"
+            app:layout_constraintEnd_toEndOf="@+id/tilName"
+            app:layout_constraintStart_toStartOf="@+id/tilName"
+            app:layout_constraintTop_toBottomOf="@+id/tilIdNumber" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:text="Lưu lại"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
+
+    </android.support.constraint.ConstraintLayout>
+
+
+</layout>
