create change password and mock data

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,9 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="haiphat.com.bds.nghetuvan.view.profile.ChangePasswordActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</android.support.constraint.ConstraintLayout>
+    <data>
+        <variable
+            name="changePasswordViewModel"
+            type="haiphat.com.bds.nghetuvan.viewmodel.profiles.ChangePasswordViewModel"/>
+    </data>
+
+    <android.support.constraint.ConstraintLayout
+        style="@style/matchParent"
+        android:background="@drawable/ic_background_auth">
+
+        <View
+            style="@style/matchParent"
+            android:alpha="0.5"
+            android:background="#6069a5" />
+
+
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/imgBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_back"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
+
+        <TextView
+            android:id="@+id/tvTitle"
+            style="@style/wrapContent"
+            android:layout_marginRight="50dp"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif"
+            android:maxLines="1"
+            android:text="@string/profile_change_password"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/rippleBack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rippleBack"
+            app:layout_constraintTop_toBottomOf="@+id/rippleBack" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilOldPassword"
+            style="@style/withWrap"
+            android:layout_marginTop="32dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/telOldPassword"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:inputType="textPassword"
+                android:hint="Nhập mật khẩu cũ"
+                android:text="@{changePasswordViewModel.oldPassword}"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_old_password}"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilPassword"
+            style="@style/withWrap"
+            android:layout_marginTop="10dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/tilOldPassword"
+            app:layout_constraintStart_toStartOf="@+id/tilOldPassword"
+            app:layout_constraintTop_toBottomOf="@+id/tilOldPassword">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetPassword"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập mật khẩu mới"
+                android:inputType="textPassword"
+                android:text="@{changePasswordViewModel.newPassword}"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_new_password}"
+                android:textColor="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilConfirmPassword"
+            style="@style/withWrap"
+            android:layout_marginTop="10dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/tilOldPassword"
+            app:layout_constraintStart_toStartOf="@+id/tilOldPassword"
+            app:layout_constraintTop_toBottomOf="@+id/tilPassword">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tetConfirmPassword"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập lại mật khẩu mới"
+                android:inputType="textPassword"
+                android:text="@{changePasswordViewModel.confirmPassword}"
+                app:validateComparableView="@{tetPassword}"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_new_confirm_password}"
+                app:validateMatchTextErrorMessage="@{@string/change_password_error_new_password_not_equal}"
+                android:textColor="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleSave"
+            style="@style/matchWrap"
+            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_view_btn_login_email"
+            app:layout_constraintEnd_toEndOf="@+id/tilOldPassword"
+            app:layout_constraintStart_toStartOf="@+id/tilOldPassword"
+            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:text="Lưu lại"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
+    </android.support.constraint.ConstraintLayout>
+
+
+</layout>
