--- a/app/src/main/res/layout/activity_contact_email.xml
+++ b/app/src/main/res/layout/activity_contact_email.xml
@@ -1,49 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout style="@style/matchParent">
+    <data>
+        <variable
+            name="contactEmailViewModel"
+            type="haiphat.com.bds.nghetuvan.viewmodel.profiles.ContactEmailViewModel"/>
+    </data>
+
+    <android.support.constraint.ConstraintLayout
+        style="@style/matchParent"
+        android:background="@drawable/ic_background_auth">
+
+        <View
+            style="@style/matchParent"
+            android:alpha="0.5"
+            android:background="#6069a5" />
 
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/widgetTitle"
-                android:layout_width="match_parent"
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/imgBack"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:src="@drawable/ic_back"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent" />
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/edTitle"
-                    style="@style/matchWrap"
-                    android:hint="Nhập địa chỉ Email"
-                    android:inputType="text" />
-            </android.support.design.widget.TextInputLayout>
+        <TextView
+            android:id="@+id/tvTitle"
+            style="@style/wrapContent"
+            android:layout_marginRight="50dp"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif"
+            android:maxLines="1"
+            android:text="@string/title_action_bar_contact"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="@+id/rippleBack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rippleBack"
+            app:layout_constraintTop_toBottomOf="@+id/rippleBack" />
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/widgetContent"
-                android:layout_width="0dp"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilEmail"
+            style="@style/withWrap"
+            android:layout_marginTop="32dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/telEmail"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:inputType="textEmailAddress"
+                android:hint="Nhập địa chỉ email"
+                android:text="@{contactEmailViewModel.email}"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_email}"
+                app:validateEmailErrorMessage="@{@string/text_validate_email_invalid}"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilPhone"
+            style="@style/withWrap"
+            android:layout_marginTop="10dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+            app:layout_constraintStart_toStartOf="@+id/tilEmail"
+            app:layout_constraintTop_toBottomOf="@+id/tilEmail">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/telPhone"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập số điện thoại"
+                android:inputType="number"
+                android:text="@{contactEmailViewModel.phone}"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_phone}"
+                app:validatePhoneErrorMessage="@{@string/text_validate_phone_invalid}"
+                android:textColor="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilContent"
+            style="@style/withWrap"
+            android:layout_marginTop="10dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+            app:layout_constraintStart_toStartOf="@+id/tilEmail"
+            app:layout_constraintTop_toBottomOf="@+id/tilPhone">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/telContent"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập nội dung"
+                android:inputType="textMultiLine"
+                android:text="@{contactEmailViewModel.content}"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_content}"
+                android:textColor="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleSave"
+            style="@style/matchWrap"
+            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_view_btn_login_email"
+            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+            app:layout_constraintStart_toStartOf="@+id/tilEmail"
+            app:layout_constraintTop_toBottomOf="@+id/tilContent">
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                app:layout_constraintEnd_toEndOf="@+id/widgetTitle"
-                app:layout_constraintStart_toStartOf="@+id/widgetTitle"
-                app:layout_constraintTop_toBottomOf="@+id/widgetTitle">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/edContent"
-                    style="@style/matchWrap"
-                    android:hint="Nội dung"
-                    android:inputType="textMultiLine" />
-            </android.support.design.widget.TextInputLayout>
-            <Button
-                android:id="@+id/btnSend"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Gửi email"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="@+id/widgetTitle"
-                app:layout_constraintStart_toStartOf="@+id/widgetTitle"
-                app:layout_constraintTop_toBottomOf="@+id/widgetContent"/>
+                android:padding="12dp"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:text="Lưu lại"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
     </android.support.constraint.ConstraintLayout>
+
+
 </layout>
