--- a/app/src/main/res/layout/activity_contact_email.xml
+++ b/app/src/main/res/layout/activity_contact_email.xml
@@ -37,6 +37,26 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </haiphat.com.bds.nghetuvan.utils.RippleView>
 
+        <haiphat.com.bds.nghetuvan.utils.RippleView
+            android:id="@+id/rippleSave"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginRight="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                style="@style/wrapContent"
+                android:text="Lưu lại"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                android:textColor="@color/colorWhite"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </haiphat.com.bds.nghetuvan.utils.RippleView>
+
         <TextView
             android:id="@+id/tvTitle"
             style="@style/wrapContent"
@@ -74,6 +94,28 @@
                 app:validateEmailErrorMessage="@{@string/text_validate_email_invalid}"/>
         </android.support.design.widget.TextInputLayout>
 
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilName"
+            style="@style/withWrap"
+            android:layout_marginTop="32dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+            app:layout_constraintStart_toStartOf="@+id/tilEmail"
+            app:layout_constraintTop_toBottomOf="@+id/tilEmail">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/telName"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:inputType="text"
+                android:hint="Nhập họ và tên"
+                android:text="@{contactEmailViewModel.name}"
+                android:textColor="@color/colorWhite"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_name}"/>
+        </android.support.design.widget.TextInputLayout>
+
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tilPhone"
             style="@style/withWrap"
@@ -81,7 +123,7 @@
             android:theme="@style/textInputLayout"
             app:layout_constraintEnd_toEndOf="@+id/tilEmail"
             app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tilEmail">
+            app:layout_constraintTop_toBottomOf="@+id/tilName">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/telPhone"
@@ -96,13 +138,33 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilContent"
+            android:id="@+id/tilAddress"
             style="@style/withWrap"
             android:layout_marginTop="10dp"
             android:theme="@style/textInputLayout"
             app:layout_constraintEnd_toEndOf="@+id/tilEmail"
             app:layout_constraintStart_toStartOf="@+id/tilEmail"
             app:layout_constraintTop_toBottomOf="@+id/tilPhone">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/telAddress"
+                style="@style/matchWrap"
+                android:gravity="center"
+                android:hint="Nhập địa chỉ"
+                android:inputType="text"
+                android:text="@{contactEmailViewModel.address}"
+                app:validateRequiredErrorMessage="@{@string/text_validate_require_field_address}"
+                android:textColor="@color/colorWhite" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilContent"
+            style="@style/withWrap"
+            android:layout_marginTop="10dp"
+            android:theme="@style/textInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+            app:layout_constraintStart_toStartOf="@+id/tilEmail"
+            app:layout_constraintTop_toBottomOf="@+id/tilAddress">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/telContent"
@@ -115,25 +177,7 @@
                 android:textColor="@color/colorWhite" />
         </android.support.design.widget.TextInputLayout>
 
-        <haiphat.com.bds.nghetuvan.utils.RippleView
-            android:id="@+id/rippleSave"
-            style="@style/matchWrap"
-            android:layout_margin="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_view_btn_login_email"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tilContent">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="12dp"
-                android:textAllCaps="false"
-                android:textColor="@color/colorWhite"
-                android:text="Lưu lại"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
-        </haiphat.com.bds.nghetuvan.utils.RippleView>
+
     </android.support.constraint.ConstraintLayout>
 
 
