--- a/app/src/main/res/layout/activity_post_comment.xml
+++ b/app/src/main/res/layout/activity_post_comment.xml
@@ -4,6 +4,10 @@
 
     <android.support.constraint.ConstraintLayout style="@style/matchParent">
 
+        <View
+            android:id="@+id/viewLine"
+            style="@style/viewLine" />
+
         <android.support.constraint.ConstraintLayout
             style="@style/matchParent"
             android:layout_width="0dp"
@@ -13,7 +17,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/viewLine">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/edContent"
