--- a/app/src/main/res/layout/fragment_news_comment.xml
+++ b/app/src/main/res/layout/fragment_news_comment.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:background="@color/colorWhite"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="haiphat.com.bds.nghetuvan.view.HomeActivity"
+        tools:context="haiphat.com.bds.nghetuvan.view.home.HomeActivity"
         tools:showIn="@layout/app_bar_home">
 
         <android.support.v4.widget.SwipeRefreshLayout
