--- a/app/src/main/res/layout/fragment_info_education.xml
+++ b/app/src/main/res/layout/fragment_info_education.xml
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.constraint.ConstraintLayout
-        style="@style/matchParent">
+    <android.support.v4.widget.NestedScrollView style="@style/matchParent">
 
-        <ProgressBar
-            android:id="@+id/pbLoadMore"
-            style="@style/wrapContent"
-            android:theme="@style/AppTheme.WhiteAccent"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipeRefreshLayout"
+        <android.support.constraint.ConstraintLayout
             style="@style/matchWrap"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/pbLoadMore"
-            app:layout_constraintTop_toTopOf="parent">
+            android:padding="20dp">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvNews"
-                style="@style/matchParent" />
-        </android.support.v4.widget.SwipeRefreshLayout>
-    </android.support.constraint.ConstraintLayout>
+            <org.sufficientlysecure.htmltextview.HtmlTextView
+                android:id="@+id/htmTextInfo"
+                style="@style/matchParent"
+
+                android:text="Chưa có dữ liệu nào cả" />
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.NestedScrollView>
 </layout>
