--- a/app/src/main/res/layout/item_show_list_home.xml
+++ b/app/src/main/res/layout/item_show_list_home.xml
@@ -24,7 +24,7 @@
             android:id="@+id/imgName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/ic_clock"
             app:layout_constraintStart_toStartOf="@+id/rippleItem"
@@ -34,7 +34,7 @@
             android:id="@+id/tvName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/imgLocation"
             app:layout_constraintEnd_toEndOf="@+id/tvLocation"
             app:layout_constraintStart_toEndOf="@+id/imgLocation"
@@ -54,7 +54,7 @@
             android:id="@+id/tvLocation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/imgName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgName"
