--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,7 +49,7 @@
                         android:id="@+id/edSearch"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
+                        android:layout_marginLeft="8dp"
                         android:layout_toRightOf="@+id/tvSell"
                         android:hint="Nhập từ khóa"
                         android:inputType="text"
